--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -2,5 +2,9 @@
   <%= link_to application_path(application) do %>
     <span><%= application.full_name %></span><br>
     <span><%= application.birth %></span>
+    <span><%= application.email %></span>
+    <span><%= application.phone %></span>
+    <span><%= application.address %></span>
+    <span><%= application.education %></span>
   <% end %>
 </div>
